libs/@local/hashql/ast/tests/ui/lower/expander/special-form-expander/let-5.jsonc
//@ run: fail
//@ description: let/5 should error out
[
  "::kernel::special_form::let",
  "x",
  "Boolean",
  { "#literal": true },
  ["+", "x", "x"],
  { "#literal": true }
  //~^ ERROR Remove this argument
]
